client app before looking at bug fixes
